# ROD

./: README.md
articulated/: CMakeLists.txt  myKey  myKey.pub  package.xml
articulated/config/: joint_names_articulated.yaml
articulated/launch/: display.launch  gazebo.launch
articulated/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
articulated/urdf/: articulated (copy).urdf  articulated.csv  articulated.urdf
baugruppe_arti4/: CMakeLists.txt  package.xml
baugruppe_arti4/config/: joint_names_baugruppe_arti4.yaml
baugruppe_arti4/launch/: display.launch  gazebo.launch  sim.launch
baugruppe_arti4/meshes/: achse1.STL  achse2.STL  achse3.STL  achse4.STL  achse5.STL  achse6.STL  base_link.STL
baugruppe_arti4/rviz/: my_config.rviz
baugruppe_arti4/urdf/: baugruppe_arti4.csv  baugruppe_arti4.urdf
baugruppe_arti4/worlds/: world.world
scara/: CMakeLists.txt  package.xml
scara/config/: joint_names_scara.yaml
scara/launch/: display.launch  gazebo.launch
scara/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4EF.STL  base_link.STL
scara/urdf/: scara.csv  scara.urdf
scara_urdf/: CMakeLists.txt  package.xml
scara_urdf/config/: joint_names_scara_urdf.yaml
scara_urdf/launch/: display.launch  gazebo.launch
scara_urdf/meshes/: M1.STL  M2.STL  M3.STL  M4L.STL  base.STL
scara_urdf/urdf/: scara_urdf.csv  scara_urdf.urdf
source/: .setup_assistant  package.xml
source/launch/: demo.launch  (+5 more)
station_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
station_neu/: CMakeLists.txt  package.xml
(+56 files in other folders)
